Made dependencies optional

--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -11,7 +11,7 @@ html(lang='fr' dir='ltr')
     meta(name='msapplication-config' content='browserconfig.xml')
     block stylesheets    
       // build:css css/app.css
-      link(rel='stylesheet' href='css/vendors/bootstrap-reboot.css')
+      //link(rel='stylesheet' href='css/vendors/bootstrap-reboot.css')
       link(rel='stylesheet' href='css/main.css')
       // endbuild
   body
@@ -19,6 +19,6 @@ html(lang='fr' dir='ltr')
       
     block scripts
       // build:js js/app.js
-      script(src='js/vendors/jquery.js')
+      //script(src='js/vendors/jquery.js')
       script(src='js/main.js')
       // endbuild
