--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -5,8 +5,8 @@ html(lang='fr' dir='ltr')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(name='description', content= 'A nice starting configuration')
-    title= "Let's build something great"
-    link(rel='icon' type='img/png' href='favicon.ico')
+    title= "Let’s build something great"
+    link(rel='icon' type='image/x-icon' href='favicon.ico')
     link(rel='apple-touch-icon' href='icon.png')
     meta(name='msapplication-config' content='browserconfig.xml')
     block stylesheets    
